--- a/style.css
+++ b/style.css
@@ -1,97 +1,99 @@
 * {
-    margin: 0;
-    padding: 0;
-    /* box-sizing: border-box; */
-  }
+  margin: 0;
+  padding: 0;
+  /* box-sizing: border-box; */
+}
 
-  body {
-    font: 13px Consolas, Arial;
-    color: navy;
-  }
+body {
+  font: 20px Consolas, Arial;
+  color: navy;
+}
 
-  form {
-    padding: 3px;
-    margin: 5px;
-    bottom: 0;
-    width: 90vw;
-    margin-top: 5px;
-  }
+form {
+  padding: 3px;
+  margin: 5px;
+  bottom: 0;
+  width: 90vw;
+  margin-top: 5px;
+}
 
-  form input {
-    border: 1px solid black;
-    padding: 10px;
-    width: 75vw;
-    /* margin-right: .5%; */
-  }
+form input {
+  font-family: consolas;
+  font-size: 20px;
+  border: 1px solid black;
+  padding: 10px;
+  width: 75vw;
+  /* margin-right: .5%; */
+}
 
-  form button {
-    width: 9%;
-    background: rgb(130, 224, 255);
-    border: 1px solid black;
-    padding: 10px;
-    margin: 5px;
-  }
+form button {
+  width: 9%;
+  background: rgb(130, 224, 255);
+  border: 1px solid black;
+  padding: 10px;
+  margin: 5px;
+}
 
-  #Messages {
-    width: 70vw;
-    height: 85vh;
-    background-color: white;
-  }
+#Messages {
+  width: 70vw;
+  height: 85vh;
+  background-color: white;
+}
 
-  #Users {
-    width: 15vw;
-    background: rgb(130, 224, 255);
-    margin-right: 1vw;
-  }
+#Users {
+  width: 15vw;
+  background: rgb(130, 224, 255);
+  margin-right: 1vw;
+}
 
-  #Tools {
-    width: 14vw;
-    background-color: lightyellow;
-    margin-right: .5vw;
-  }
+#Tools {
+  width: 14vw;
+  background-color: lightyellow;
+  margin-right: .5vw;
+}
 
-  #Messages,
-  #Users,
-  #Tools {
-    overflow: auto;
-    margin: .5vw;
-    padding: .5vw;
-    border: 1px solid black;
-  }
+#Messages,
+#Users,
+#Tools {
+  overflow: auto;
+  margin: .5vw;
+  padding: .5vw;
+  border: 1px solid black;
+}
 
-  #Messages,
-  #Users,
-  #Tools {
-    margin-right: 0px;
-    margin-bottom: 0px;
-  }
+#Messages,
+#Users,
+#Tools {
+  margin-right: 0px;
+  margin-bottom: 0px;
+}
 
-  #messages {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    height: 85vh;
-  }
+#messages {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  height: 85vh;
+}
 
-  #users {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
+#users {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
-  #messages li {
-    padding: 2px 2px;
-  }
+#messages li {
+  padding: 2px 2px;
+}
 
-  #messages li:nth-child(odd) {
-    background: #eee;
-  }
+#messages li:nth-child(odd) {
+  background: #eee;
+}
 
-  #container {
-    width: 95vw;
-    display: flex;
-  }
+#container {
+  width: 95vw;
+  display: flex;
+}
 
-  #first {
-    display: none;
-  }
+#first {
+  display: none;
+}
